# Github-Scout

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
github_scout/: __init__.py
github_scout/analytics/: __init__.py  queries.py
github_scout/cli/: __init__.py  main.py
github_scout/client/: __init__.py  github_client.py  paginator.py  rate_limiter.py
github_scout/config/: __init__.py  graphql_queries.py  settings.py
github_scout/crawler/: __init__.py  enricher.py  query_slicer.py  spider.py
github_scout/database/: __init__.py  connection.py  dao.py  schema.py
github_scout/models/: __init__.py  crawl_run.py  repository.py
github_scout/scoring/: __init__.py  features.py  scorer.py
notebooks/: cohort_analysis.py  github_scout_analysis.ipynb
tests/: test_client.py  test_dao.py  test_scoring.py
